cluster-talos/kubernetes/apps/ombi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ombi
  labels:
    k10.kasten.io/backup: "true"
    k10.kasten.io/storage-class: vsphere
